# airflow-init

./: .gitignore  Dockerfile  docker-compose.override.yml  requirements.txt
.astro/: config.yaml
dags/: anbima_diario_fundo_consolidado.py
dags-dev/: pyproject.toml
dags-dev/src/: anbima_fi_consolidado.py
