[tool.poetry]
name = "dags-dev"
version = "0.1.0"
description = ""
authors = ["Jose Vilson <contatojosevilson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.48.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
